force-app/main/default/objects/Propuesta__c/fields/Aprobado_Apertura_de_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Aprobado_Apertura_de_Cuenta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobado Apertura de Cuenta</label>
    <type>Checkbox</type>
</CustomField>