force-app/main/default/objects/Propuesta__c/fields/Aprobado_Propuesta_Ganada__c.field-meta.xml
<CustomField>
    <fullName>Aprobado_Propuesta_Ganada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobado Propuesta Ganada</label>
    <type>Checkbox</type>
</CustomField>