force-app/main/default/objects/Propuesta__c/fields/Etapas__c.field-meta.xml
<CustomField>
    <fullName>Etapas__c</fullName>
    <label>Etapas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospecto</fullName>
            </value>
            <value>
                <fullName>Diseño Propuesta</fullName>
            </value>
            <value>
                <fullName>Propuesta Presentada</fullName>
            </value>
            <value>
                <fullName>Negociación</fullName>
            </value>
            <value>
                <fullName>Apertura de Cuenta</fullName>
            </value>
            <value>
                <fullName>Ganada</fullName>
            </value>
            <value>
                <fullName>Perdida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>