force-app/main/default/objects/Propuesta__c/fields/Fecha_Cierre__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Cierre__c</fullName>
    <label>Fecha Cierre</label>
    <type>Date</type>
</CustomField>