force-app/main/default/objects/Propuesta__c/fields/Fecha_Solicitud_Apertura_de_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Solicitud_Apertura_de_Cuenta__c</fullName>
    <label>Fecha Solicitud Apertura de Cuenta</label>
    <type>Date</type>
</CustomField>