force-app/main/default/objects/Propuesta__c/fields/Fecha_Solicitud_Propuesta_Ganada__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Solicitud_Propuesta_Ganada__c</fullName>
    <label>Fecha Solicitud Propuesta Ganada</label>
    <type>Date</type>
</CustomField>