force-app/main/default/objects/Propuesta__c/fields/Frecuencia__c.field-meta.xml
<CustomField>
    <fullName>Frecuencia__c</fullName>
    <label>Frecuencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diaria</fullName>
            </value>
            <value>
                <fullName>Semanal</fullName>
            </value>
            <value>
                <fullName>Mensual</fullName>
            </value>
            <value>
                <fullName>Trimestral</fullName>
            </value>
            <value>
                <fullName>Semestral</fullName>
            </value>
            <value>
                <fullName>Anual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>