force-app/main/default/objects/Propuesta__c/fields/Indique_otra_Condicion_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Indique_otra_Condicion_de_Pago__c</fullName>
    <label>Indique otra Condición de Pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>