force-app/main/default/objects/Propuesta__c/fields/Indique_otro_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Indique_otro_Servicio__c</fullName>
    <label>Indique otro Servicio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>