force-app/main/default/objects/Propuesta__c/fields/Modalidad__c.field-meta.xml
<CustomField>
    <fullName>Modalidad__c</fullName>
    <label>Modalidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAPTACION</fullName>
            </value>
            <value>
                <fullName>MANTENCION</fullName>
            </value>
            <value>
                <fullName>RECAPTACION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>