force-app/main/default/objects/Propuesta__c/fields/Modificar_peso_Seleccionado__c.field-meta.xml
<CustomField>
    <fullName>Modificar_peso_Seleccionado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modificar peso Seleccionado</label>
    <type>Checkbox</type>
</CustomField>