force-app/main/default/objects/Propuesta__c/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <label>Moneda</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
                <default>true</default>
                <label>USD</label>
            </value>
            <value>
                <fullName>CLP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>