force-app/main/default/objects/Propuesta__c/fields/Monto_USD__c.field-meta.xml
<CustomField>
    <fullName>Monto_USD__c</fullName>
    <inlineHelpText>Considerar valor mensual</inlineHelpText>
    <label>Monto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>