force-app/main/default/objects/Propuesta__c/fields/Motivo_de_perdida__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_perdida__c</fullName>
    <label>Motivo de pérdida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tarifa</fullName>
            </value>
            <value>
                <fullName>Tiempo de Tránsito</fullName>
            </value>
            <value>
                <fullName>Servicio</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>