force-app/main/default/objects/Propuesta__c/fields/N_Guia__c.field-meta.xml
<CustomField>
    <fullName>N_Guia__c</fullName>
    <label>N° Guía</label>
    <length>10</length>
    <type>Text</type>
</CustomField>