force-app/main/default/objects/Propuesta__c/fields/Pais_de_Destino__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_Destino__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País de Destino</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Propuestas (País de Destino)</relationshipLabel>
    <relationshipName>Propuestas_Pais_Destino</relationshipName>
    <type>Lookup</type>
</CustomField>