force-app/main/default/objects/Propuesta__c/fields/Pais_de_Origen__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_Origen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País de Orígen</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Propuestas</relationshipLabel>
    <relationshipName>Propuestas_Pais_Origen</relationshipName>
    <type>Lookup</type>
</CustomField>