force-app/main/default/objects/Propuesta__c/fields/Peso_a_Cobrar__c.field-meta.xml
<CustomField>
    <fullName>Peso_a_Cobrar__c</fullName>
    <label>Peso a Cobrar</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>