force-app/main/default/objects/Propuesta__c/fields/Peso_promedio__c.field-meta.xml
<CustomField>
    <fullName>Peso_promedio__c</fullName>
    <label>Peso promedio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>