force-app/main/default/objects/Propuesta__c/fields/Peso_Volumetrico__c.field-meta.xml
<CustomField>
    <fullName>Peso_Volumetrico__c</fullName>
    <label>Peso Volumétrico</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>