force-app/main/default/objects/Propuesta__c/fields/Proyecto_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Proyecto_Relacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proyecto Relacionado</label>
    <referenceTo>Proyecto__c</referenceTo>
    <relationshipLabel>Propuestas</relationshipLabel>
    <relationshipName>Propuestas</relationshipName>
    <type>Lookup</type>
</CustomField>