force-app/main/default/objects/Propuesta__c/fields/Servicio__c.field-meta.xml
<CustomField>
    <fullName>Servicio__c</fullName>
    <label>Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Courier Importación</fullName>
            </value>
            <value>
                <fullName>Courier Exportación</fullName>
            </value>
            <value>
                <fullName>Casillero Importación</fullName>
            </value>
            <value>
                <fullName>Carga Aérea Importación</fullName>
            </value>
            <value>
                <fullName>Carga Aérea Exportación</fullName>
            </value>
            <value>
                <fullName>Carga Marítima Importación</fullName>
            </value>
            <value>
                <fullName>Carga Marítima Exportación</fullName>
            </value>
            <value>
                <fullName>Distribución Nacional</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>