force-app/main/default/objects/Propuesta__c/fields/Tarifa__c.field-meta.xml
<CustomField>
    <fullName>Tarifa__c</fullName>
    <label>Tarifa</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>