force-app/main/default/objects/Propuesta__c/fields/Tarifa_Total__c.field-meta.xml
<CustomField>
    <fullName>Tarifa_Total__c</fullName>
    <formula>Peso_a_Cobrar__c * Tarifa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tarifa Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>