force-app/main/default/objects/Propuesta__c/validationRules/Motivo_de_Exito_para_Etapa_Ganada.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_de_Exito_para_Etapa_Ganada</fullName>
    <active>true</active>
    <description>Si mueves la etapa a &quot;Ganada&quot; debes elegir un &quot;Motivo de éxito&quot; y además dejar un comentario.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Etapas__c, &quot;Ganada&quot;),  
    ISPICKVAL(Motivo_de_exito__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Si mueves la etapa a &quot;Ganada&quot; debes elegir un &quot;Motivo de éxito&quot; y además dejar un comentario.</errorMessage>
</ValidationRule>