force-app/main/default/objects/Propuesta__c/validationRules/Motivo_de_Perdida_para_Etapa_Perdida.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_de_Perdida_para_Etapa_Perdida</fullName>
    <active>true</active>
    <description>Si mueves la etapa a &quot;Perdida&quot; debes elegir un &quot;Motivo de pérdida&quot; y además dejar un comentario.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Etapas__c, &quot;Perdida&quot;),  
    ISPICKVAL(Motivo_de_perdida__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Si mueves la etapa a &quot;Perdida&quot; debes elegir un &quot;Motivo de pérdida&quot; y además dejar un comentario.</errorMessage>
</ValidationRule>