force-app/main/default/objects/Propuesta__c/validationRules/Valida_etapa_Apertura_de_cuenta.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_etapa_Apertura_de_cuenta</fullName>
    <active>true</active>
    <errorConditionFormula>IF( and(  text(Modalidad__c) &lt;&gt;&apos;MANTENCION&apos;,text(Etapas__c )=&apos;Ganada&apos;,Aprobado_Apertura_de_Cuenta__c =false) , true ,false)</errorConditionFormula>
    <errorMessage>Debe solicitar aprobación para la nueva Apertura de Cuenta</errorMessage>
</ValidationRule>